<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/matching"
              android:orientation="vertical" 
              android:padding="10dip"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:background="#ffffff">
    
    <ViewFlipper android:id="@+id/flipper"
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:flipInterval="2000" 
                 android:layout_marginBottom="20dip">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:textAlign="center"
            android:typeface="serif" 
            android:textStyle="bold|italic" 
            android:textSize="20sp" android:text="@string/profile1" 
            android:textColor="#ffcccc"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" android:typeface="serif" 
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:text="@string/profile2" 
            android:textColor="#deb887"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:textSize="20sp" 
            android:text="@string/profile3" 
            android:textColor="#add4e5"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif" 
            android:textStyle="bold|italic" 
            android:textSize="20sp"
            android:text="@string/profile4" 
            android:textColor="#ff000f"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif" 
            android:textStyle="bold|italic" 
            android:textSize="26sp" 
            android:text="@string/profile5" 
            android:textColor="#ff000f"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif"
            android:textStyle="bold|italic" 
            android:textSize="20sp" 
            android:text="@string/profile6" 
            android:textColor="#ff000f"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif" 
            android:textStyle="bold|italic" 
            android:textSize="20sp" 
            android:text="@string/profile7" 
            android:textColor="#ff000f"/>
        <TextView 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:textAlign="center" 
            android:typeface="serif"
            android:textStyle="bold|italic" 
            android:textSize="20sp" 
            android:text="@string/profile8" 
            android:textColor="#ff000f"/>
    </ViewFlipper>
    <Button 
        android:id="@+id/chating" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
            android:text="chat">
        </Button>
    </LinearLayout>